# tauri-ui

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: __app__.json  default.json
src-tauri/src/: broker.rs  lib.rs  state.rs
src/ui/: Renderer.tsx  types.ts
